# airflow-serde-polars

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: dependabot.yml
.github/workflows/: check.yaml  lint.yaml
src/airflow/serialization/serializers/: polars.py
src/airflow_serde_polars/: __init__.py  main.py
src/airflow_serde_polars/dump/: v0.py  v1.py  v2.py
src/airflow_serde_polars/load/: v0.py  v1.py
src/airflow_serde_polars/utils/: parse.py  typing.py
src/tests/: conftest.py  test_serde.py
tests/: conftest.py  test_serde.py
