[project]
name = "airflow-serde-polars"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "phi", email = "phi.friday@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_serde_polars"]
