[project]
name = "airflow-serde-polars"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "phi", email = "phi.friday@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "polars[pyarrow]>=1.0.0",
]

[project.optional-dependencies]
test = [
    "apache-airflow>=2.8.1", # support pep440
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "airflow-serde-polars[test]",
    "ruff==0.5.5",
]
[tool.rye.scripts]
lint = { chain = ["lint:check", "lint:format"] }
"lint:check" = "ruff check src tests --fix"
"lint:format" = "ruff format src tests"
check = "pre-commit run --all-files --show-diff-on-failure"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_serde_polars", "src/airflow/serialization/serializers"]
